reconfiguration jacoco