@@ -509,45 +509,6 @@
 			<build>
 				<plugins>
 					<plugin>
-						<groupId>org.eclipse.tycho</groupId>
-						<artifactId>tycho-surefire-plugin</artifactId>
-						<configuration>
-							<skip>true</skip>
-						</configuration>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>test</id>
-								<phase>test</phase>
-								<configuration>
-									<argLine>${coverageAgent} -Xms256m -Xmx512m -XX:MaxPermSize=512m</argLine>
-									<testClassesDirectory>${project.build.outputDirectory}</testClassesDirectory>
-									<excludes>
-									</excludes>
-								</configuration>
-								<goals>
-									<goal>test</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>			
-					<!--plugin>
-						<groupId>org.eclipse.tycho</groupId>
-						<artifactId>tycho-surefire-plugin</artifactId>
-						<version>${tycho-version}</version>
-						<configuration>
-							<argLine>${coverageAgent}</argLine>
-							<useUIHarness>false</useUIHarness>
-							<includes>
-								<include>**/*Test.java</include>
-							</includes>
-							<forkedProcessTimeoutInSeconds>600</forkedProcessTimeoutInSeconds>
-						</configuration>
-					</plugin-->
-					<plugin>
 						<groupId>org.jacoco</groupId>
 						<artifactId>jacoco-maven-plugin</artifactId>
 						<version>${jacoco.version}</version>
